tests/invalidTest/test_6.q
# EXPECT Error:type cannot be converted
def uint16 test(){

  sint8 var4 = 128   #define & constant num
  sint8 var4 = -129
  return 0
}

